--- a/servicios.html
+++ b/servicios.html
@@ -5,5 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Servicios</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Servicios</h1>
+  </body>
 </html>
